@@ -1,4 +1,7 @@
 2011-10-15
+  Added Show in plugin dialog. Added sort plugin. [FR 3735]
+
+2011-10-15
  Added procedure editor to debug menu.
 
 2011-10-15
